--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_home_fragment">home fragment</string>
     <string name="hello_history_fragment">history</string>
+    <string name="hello_request_fragment">hello request fragment</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
